@@ -407,8 +407,8 @@ public class TestNameNodeMetrics {
     MetricsRecordBuilder rb = getMetrics(NN_METRICS);
     // Each datanode reports in when the cluster comes up
     assertCounter("BlockReportNumOps",
-        (long)DATANODE_COUNT * cluster.getStoragesPerDatanode(), rb);
-
+                  (long)DATANODE_COUNT * cluster.getStoragesPerDatanode(), rb);
+    
     // Sleep for an interval+slop to let the percentiles rollover
     Thread.sleep((PERCENTILES_INTERVAL+1)*1000);
 
